gcc/testsuite/gm2/iso/fail/testarrayunbounded3.mod
MODULE testarrayunbounded3 ;


PROCEDURE foo (a: ARRAY OF CARDINAL) ;
BEGIN

END foo ;


VAR
   b: CARDINAL ;
BEGIN
   foo (b)
END testarrayunbounded3.
